# mcpat

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  XML_Parse.cc  XML_Parse.h  array.cc  array.h  basic_components.h  core.cc  interconnect.cc  iocontrollers.cc  iocontrollers.h  logic.cc  mcpat.mk  memoryctrl.cc  noc.cc  processor.cc  processor.h  sharedcache.cc  version.h  xmlParser.cc
ExampleResults/: ARM_A9_2GHz  ARM_A9_2GHz_withIOC  Alpha21364  Penryn  T1  T1_DC_64  T1_SBT_64  T1_ST_64  T2  Xeon
ProcessorDescriptionFiles/: Penryn.xml  Xeon.xml
cacti/: Ucache.cc  arbiter.cc  arbiter.h  bank.cc  bank.h  basic_circuit.h  cacti_interface.cc  component.h  const.h  crossbar.cc  decoder.cc  decoder.h  htree2.cc  htree2.h  io.cc  io.h  mat.cc  nuca.cc  nuca.h  out.csv  powergating.cc  powergating.h  router.cc  router.h  subarray.h  technology.cc  uca.h  version_cacti.h  wire.cc  wire.h
src/: CMakeLists.txt  XML_Parse.cc  XML_Parse.h  arch_const.h  array.cc  array.h  basic_components.cc  basic_components.h  core.cc  core.h  interconnect.cc  interconnect.h  iocontrollers.cc  iocontrollers.h  logic.cc  logic.h  main.cc  memoryctrl.cc  memoryctrl.h  noc.cc  noc.h  options.cc  options.h  processor.cc  processor.h  sharedcache.cc  sharedcache.h  xmlParser.cc  xmlParser.h
src/cache/: CMakeLists.txt  cache_param.cc  cache_param.h  datacache.cc  datacache.h  instcache.cc  instcache.h  sharedcache.cc  sharedcache.h
src/cacti/: CMakeLists.txt  Ucache.cc  Ucache.h  arbiter.cc  arbiter.h  area.cc  area.h  bank.cc  basic_circuit.cc  basic_circuit.h  cacti_interface.h  component.cc  component.h  crossbar.cc  crossbar.h  decoder.cc  decoder.h  htree2.cc  htree2.h  io.cc  main.cc  mat.cc  mat.h  nuca.cc  nuca.h  parameter.cc  parameter.h  powergating.cc  powergating.h  router.cc  router.h  subarray.cc  technology.cc  uca.cc  wire.cc  wire.h
src/cacti/decoder/: CMakeLists.txt  decoder.cc  decoder.h  driver.cc  driver.h  predec.cc  predec.h  predec_blk.cc  predec_blk.h  predec_blk_drv.cc  predec_blk_drv.h
src/core/: CMakeLists.txt  branch_predictor.cc  branch_predictor.h  core.cc  core.h  exec_unit.cc  exec_unit.h  instfetch.cc  instfetch.h  loadstore.cc  loadstore.h  mmu.cc  mmu.h  regfile.cc  regfile.h  renaming_unit.cc  renaming_unit.h  scheduler.cc  scheduler.h
src/iocontrollers/: CMakeLists.txt  flash_controller.cc  flash_controller.h  flashcontroller.cc  flashcontroller.h  niu_controller.cc  niu_controller.h  pcie_controller.cc  pcie_controller.h
src/logic/: CMakeLists.txt  dep_resource_conflict_check.cc  dep_resource_conflict_check.h  dff_cell.cc  dff_cell.h  functional_unit.cc  functional_unit.h  inst_decoder.cc  inst_decoder.h  pipeline.cc  pipeline.h  selection_logic.cc  selection_logic.h  undiff_core.cc  undiff_core.h
src/memoryctrl/: CMakeLists.txt  mc_backend.cc  mc_backend.h  mc_frontend.cc  mc_frontend.h  mc_phy.cc  mc_phy.h  memoryctrl.cc  memoryctrl.h
unit_test/: format.sh  unit_test.py  unit_test.sh
unit_test/golden/basic_test_1/: Alpha21364.golden
unit_test/golden/serialization_test_1/: mp_01.golden  mp_02.golden  mp_03.golden  mp_04.golden  mp_05.golden  mp_06.golden  mp_07.golden  mp_08.golden  mp_09.golden  mp_10.golden  mp_11.golden  mp_13.golden  mp_14.golden  mp_15.golden  mp_16.golden  mp_17.golden  mp_18.golden  mp_19.golden  mp_20.golden  mp_21.golden  mp_22.golden  mp_23.golden  mp_24.golden  mp_25.golden  mp_26.golden  mp_27.golden  mp_28.golden  mp_29.golden  mp_30.golden  mp_31.golden  mp_33.golden  mp_34.golden  mp_35.golden  mp_36.golden  mp_37.golden  mp_38.golden  mp_39.golden  mp_40.golden  mp_41.golden  mp_42.golden  (+6 more)
unit_test/golden/serialization_test_2/: mp_01.golden  mp_02.golden  mp_03.golden  mp_04.golden  mp_05.golden  mp_06.golden  mp_07.golden  mp_08.golden  mp_09.golden  mp_10.golden  mp_11.golden  mp_12.golden  mp_13.golden  mp_14.golden  mp_15.golden  mp_16.golden  mp_17.golden  mp_18.golden  mp_19.golden  mp_20.golden  mp_21.golden  mp_22.golden  mp_23.golden  mp_24.golden  mp_26.golden  mp_27.golden  mp_28.golden  mp_29.golden  mp_31.golden  mp_32.golden  mp_33.golden  mp_35.golden  mp_36.golden  mp_38.golden  mp_42.golden
unit_test/golden/serialization_test_3/: mp_01.golden  mp_02.golden  mp_03.golden  mp_04.golden  mp_05.golden  mp_07.golden  mp_08.golden  mp_09.golden  mp_10.golden  mp_11.golden  mp_12.golden  mp_13.golden  mp_14.golden  mp_15.golden  mp_16.golden  mp_17.golden  mp_18.golden  mp_19.golden  mp_20.golden  mp_21.golden  mp_22.golden  mp_23.golden  mp_24.golden  mp_25.golden  mp_26.golden  mp_27.golden  mp_28.golden  mp_29.golden  mp_30.golden  mp_31.golden  mp_32.golden  mp_33.golden  mp_34.golden  mp_35.golden  mp_36.golden  mp_37.golden  mp_38.golden  mp_39.golden  mp_40.golden  mp_41.golden  (+9 more)
unit_test/golden/serialization_test_4/: mp_01.golden  mp_02.golden  mp_03.golden  mp_04.golden  mp_05.golden  mp_06.golden  mp_07.golden  mp_08.golden  mp_09.golden  mp_10.golden  mp_11.golden  mp_12.golden  mp_13.golden  mp_14.golden  mp_15.golden  mp_16.golden  mp_17.golden  mp_18.golden  mp_19.golden  mp_20.golden  mp_21.golden  mp_22.golden  mp_23.golden  mp_24.golden  mp_25.golden  mp_26.golden  mp_27.golden  mp_28.golden  mp_29.golden  mp_30.golden  mp_31.golden  mp_34.golden  mp_35.golden  mp_36.golden  mp_38.golden  mp_39.golden  mp_40.golden  mp_41.golden  mp_42.golden  mp_43.golden  (+5 more)
unit_test/input/serialization_test_1/: mp_01.xml  mp_02.xml  mp_03.xml  mp_04.xml  mp_05.xml  mp_07.xml  mp_09.xml  mp_10.xml  mp_11.xml  mp_13.xml  mp_14.xml  mp_15.xml  mp_16.xml  mp_17.xml  mp_18.xml  mp_19.xml  mp_20.xml  mp_21.xml  mp_22.xml  mp_23.xml  mp_24.xml  mp_25.xml  mp_26.xml  mp_27.xml  mp_28.xml  mp_29.xml  mp_30.xml  mp_31.xml  mp_33.xml  mp_34.xml  mp_35.xml  mp_36.xml  mp_37.xml  mp_38.xml  mp_39.xml  mp_40.xml  mp_41.xml  mp_42.xml  mp_43.xml  mp_44.xml  (+4 more)
unit_test/input/serialization_test_2/: mp_01.xml  mp_02.xml  mp_03.xml  mp_04.xml  mp_06.xml  mp_07.xml  mp_08.xml  mp_09.xml  mp_10.xml  mp_11.xml  mp_12.xml  mp_13.xml  mp_14.xml  mp_15.xml  mp_16.xml  mp_17.xml  mp_18.xml  (+17 more)
util/: format.sh
(+96 files in other folders)
